<resources>
    <string name="hpk_privacy_button_next"> 下一个</string>
    <string name="hpk_privacy_button_agree"> 同意</string>
    <string name="hpk_privacy_button_decline"> 拒绝</string>
    <string name="hpk_privacy_desc"> 在您使用本游戏服务前，请您务必审慎阅读、充分理解《使用条款》、《隐私权政策》等法律文件。请您特别注意其中涉及到您权利义务、有关隐私保护的相关条款。同时，您应特别注意前述协议中免除或者限制我们责任的条款、对您权利进行限制的条款、约定争议解决方式和司法管辖的条款。如您已详细阅读并同意以下《使用条款》、《隐私权政策》等文件，请点击“同意”开始使用我们的服务。如您拒绝，将无法进入游戏。</string>
    <string name="hpk_term_of_use_title"> 使用条款 </string>
    <string name="hpk_privacy_policy_title"> 隐私政策 </string>
    <string name="hpk_cookies_policy_title"> COOKIES政策</string>
    <string name="hpk_eula_title"> EULA </string>
</resources>