<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hpk_privacy_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hpk_policy_bg_popup">
    <LinearLayout
        android:id="@+id/hpk_policy_desc_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/hpk_policy_scroll_desc"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:fadeScrollbars="false"
            android:scrollbarSize="3dp"
            android:scrollbarThumbVertical="@drawable/hpk_policy_scrollbar"
            android:scrollbarTrackVertical="@drawable/hpk_policy_scrollbar_track">

            <TextView
                android:id="@+id/hpk_policy_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="13dp"
                android:text="@string/hpk_privacy_desc"
                android:textSize="10sp" />
        </ScrollView>


<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="3dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:background="@drawable/hpk_policy_hor_bar" />-->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/hpk_privacy_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hpk_policy_desc_layout">


        <ScrollView
            android:id="@+id/hpk_policy_scroll_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_hpk_policy_term"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/hpk_privacy_layout_tab_unselected_top_left"
                    android:text="@string/hpk_term_of_use_title"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_hpk_policy_privacy"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-2dp"

                    android:background="@drawable/hpk_privacy_layout_tab_unselected_mid"
                    android:text="@string/hpk_privacy_policy_title"

                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_hpk_policy_cookies"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-2dp"

                    android:background="@drawable/hpk_privacy_layout_tab_unselected_mid"
                    android:text="@string/hpk_cookies_policy_title"

                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_hpk_policy_eula"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-2dp"

                    android:background="@drawable/hpk_privacy_layout_tab_unselected_bottom_left"
                    android:text="@string/hpk_eula_title"

                    android:textSize="12sp" />
            </LinearLayout>
        </ScrollView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_hpk_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/hpk_policy_scroll_bar"
            android:layout_toRightOf="@+id/hpk_policy_scroll_bar"
            android:layout_marginLeft="-2dp"

            android:background="@drawable/hpk_privacy_layout_viewpage" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/hpk_layout_button_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hpk_privacy_content">

        <Button
            android:id="@+id/btn_hpk_privacy_decline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="9dp"
            android:background="@drawable/hpk_privacy_layout_btn"
            android:text="@string/hpk_privacy_button_decline"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_hpk_privacy_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/hpk_privacy_layout_btn"
            android:text="@string/hpk_privacy_button_next"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>